<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical" >
    <EditText
        android:id="@+id/workout_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/workout_name" />
    <EditText
        android:id="@+id/number_of_sets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sets"
        android:inputType="number"/>
    <EditText
        android:id="@+id/exercises"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_exercises" />

    <TextView
        android:id="@+id/exercise_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exercise_length"
        android:textSize="22dp"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"/>

    <TextView
        android:id="@+id/recovery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recovery"
        android:textSize="22dp"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"/>
    <TextView
        android:id="@+id/rest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rest"
        android:textSize="22dp"
        android:clickable="true"
        android:background="?attr/selectableItemBackground"/>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Confirm Selections"
        android:id="@+id/confirm_selections_addWorkouts">
    </Button>


</LinearLayout>
